# audioleaf

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  DEBUG.md  Dockerfile  Makefile  README.md  install_share_port_sync.sh
.githooks/: pre-commit
.github/workflows/: build.yaml  container.yaml
Assets/audioleaf.icon/: icon.json
containers/: audioleaf.container  compose.yaml  diag.sh  entrypoint.sh
docker/: audioleaf.service  compose.yaml
pi/: setup.sh
piWebServer/: asound-default-loopback.conf  shairport-sync.conf
src/: app.rs  audio.rs  config.rs  constants.rs  event_handler.rs  graphical_layout.rs  layout_visualizer.rs  lib.rs  main.rs  nanoleaf.rs  now_playing.rs  palettes.rs  panic.rs  processing.rs  ssdp.rs  utils.rs  visualizer.rs
web/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  api.ts  index.css
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  switch.tsx
